# benchmark_predicate_dispatch

./: README.md  pyproject.toml
tests/: test_benchmark_predicate_dispatch.py
